--- a/package.json
+++ b/package.json
@@ -9,16 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.1",
+    "@next/font": "^13.1.4",
+    "@notionhq/client": "^2.2.1",
+    "next": "13.1.4",
+    "notion-to-md": "^2.5.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "stripe": "^10.14.0",
+    "valtio": "^1.7.6"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
-  }
+  },
+  "engines": {
+    "node": ">=16.0.0 <17.0.0"
+  },
+  "packageManager": ">=pnpm@7.13.4"
 }
